language/move-lang/tests/move_check/typing/exp_list_nested.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/exp_list_nested.move:6:9
  │
5 │     fun t0(): (u64, S, R<u64>) {
  │               ---------------- Expected expression list of length 3: '(u64, 0x8675309::M::S, 0x8675309::M::R<u64>)'
6 │         (0, (S{}, R{}))
  │         ^^^^^^^^^^^^^^^
  │         │
  │         Invalid return expression
  │         Given expression list of length 2: '({integer}, (0x8675309::M::S, 0x8675309::M::R<_>))'

error[E04005]: expected a single type
  ┌─ tests/move_check/typing/exp_list_nested.move:6:9
  │
6 │         (0, (S{}, R{}))
  │         ^^^^^^^^^^^^^^^
  │         │   │
  │         │   Expected a single type, but found expression list type: '(0x8675309::M::S, 0x8675309::M::R<_>)'
  │         Invalid expression list type argument

error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/exp_list_nested.move:6:19
  │
6 │         (0, (S{}, R{}))
  │                   ^^^ Could not infer this type. Try adding an annotation

